Новые изменения в gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 Код для проверкие.txt
+__pycache__/
+
+# Файлы виртуальных окружений
+venv/
+
+# Результаты тестов
+.coverage
+.tox/
+
+# Конфигурационные файлы
+.pip-tools
+pipfile.lock
